--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "test": "jest",
+    "coverage": "jest run --coverage"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.22.0",
@@ -16,6 +16,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "got": "^12.5.3",
     "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,14 +26,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@jest/globals": "^29.3.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.6",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@types/uuid": "^9.0.0",
     "eslint": "7.32.0",
     "eslint-config-custom": "workspace:*",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "tsconfig": "workspace:*",
-    "typescript": "^4.5.3",
-    "vitest": "^0.27.2"
+    "typescript": "^4.5.3"
   }
 }
