--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
     },
     "web#build": {
       "dependsOn": ["^build"],
-      "env": ["TINYBIRD_BASE_URL"],
+      "env": ["TINYBIRD_BASE_URL", "TINYBIRD_API_KEY"],
       "outputs": ["dist/**", ".next/**"]
     },
     "lint": {
