feat: pre sure theres no keys in here

--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "init": "tb init",
     "auth": "tb auth",
-    "push": "tb push"
+    "push": "tb push",
+    "pull": "tb pull"
   }
 }
