--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "coverage": "jest run --coverage"
+    "coverage": "jest run --coverage",
+    "generate": "node -r @swc-node/register ./scripts/generate.ts"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.22.0",
@@ -27,6 +28,9 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@jest/globals": "^29.3.1",
+    "@ngneat/falso": "^6.4.0",
+    "@swc-node/register": "^1.5.5",
+    "@swc/core": "^1.3.27",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.6",
